# projeto_carteira_investimentos

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 14feb8d2247f_cascade_on_delete.py  1f686649c7f9_vincular_operacao_com_carteira.py  44d336d4cada_incluindo_o_cascade.py  7ccce4aafdc7_incluindo_o_cascade.py  80e03079ab82_correcao_foreignkey.py  b257ed68286b_initial_migration.py  b7bdf8195320_vincular_operacao_com_ativos.py  daf6a8511c75_atualizando_tabela_ativos_carteira.py  e8fd33090bd4_incluindo_o_cascade.py  ece70956b3bc_migração_inicial.py
carteira_investimentos/: view.py
carteira_investimentos/controllers/: depends.py
carteira_investimentos/controllers/crud/: ativos_carteira_controllers.py  carteira_controllers.py  operacao_controllers.py  user_controllers.py
carteira_investimentos/controllers/security/: auth.py
carteira_investimentos/controllers/utils/: assets.py  ativos_carteira.py  carteira_utils.py
carteira_investimentos/database/: config.py  dependencies.py
carteira_investimentos/database/models/: models.py
carteira_investimentos/routers/: assets_router.py  ativos_routers.py  carteira_routers.py  operacao_routers.py  user_routers.py
carteira_investimentos/schemas/: ativo_schemas.py  schemas.py
carteira_investimentos/shared/: excepctions.py  exceptions_handler.py
